--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <p>Welcome to the TEST</p>
+        <p>Welcome to the TEST<br />
+        Hier geht es weiter!</p>
         <script src="typescript/Prompt.ts" async defer></script>
     </body>
 </html>
