typescript folder to "scripts"

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
         <![endif]-->
         <p>Welcome to the TEST<br />
         Hier geht es weiter!</p>
-        <script src="typescript/Prompt.js" async defer></script>
+        <script src="scripts/Prompt.js" async defer></script>
     </body>
 </html>
